@@ -1,0 +1,168 @@
+<?php
+/**
+ * kreXX: Krumo eXXtended
+ *
+ * kreXX is a debugging tool, which displays structured information
+ * about any PHP object. It is a nice replacement for print_r() or var_dump()
+ * which are used by a lot of PHP developers.
+ *
+ * kreXX is a fork of Krumo, which was originally written by:
+ * Kaloyan K. Tsvetkov <kaloyan@kaloyan.info>
+ *
+ * @author
+ *   brainworXX GmbH <info@brainworxx.de>
+ *
+ * @license
+ *   http://opensource.org/licenses/LGPL-2.1
+ *
+ *   GNU Lesser General Public License Version 2.1
+ *
+ *   kreXX Copyright (C) 2014-2019 Brainworxx GmbH
+ *
+ *   This library is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU Lesser General Public License as published by
+ *   the Free Software Foundation; either version 2.1 of the License, or (at
+ *   your option) any later version.
+ *   This library is distributed in the hope that it will be useful, but WITHOUT
+ *   ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ *   FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License
+ *   for more details.
+ *   You should have received a copy of the GNU Lesser General Public License
+ *   along with this library; if not, write to the Free Software Foundation,
+ *   Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ */
+
+namespace Brainworxx\Krexx\View\Output;
+
+use Brainworxx\Krexx\Service\Config\Config;
+use Brainworxx\Krexx\Service\Config\Fallback;
+use Brainworxx\Krexx\Service\Factory\Pool;
+
+/**
+ * Check the kind of output.
+ *
+ * @package Brainworxx\Krexx\View\Output
+ */
+class CheckOutput
+{
+    /**
+     * Here we store all relevant data.
+     *
+     * @var \Brainworxx\Krexx\Service\Factory\Pool
+     */
+    protected $pool;
+
+    /**
+     * Injects the pool.
+     *
+     * @param \Brainworxx\Krexx\Service\Factory\Pool $pool
+     */
+    public function __construct(Pool $pool)
+    {
+        $this->pool = $pool;
+    }
+
+    /**
+     * Check for an ajax request.
+     *
+     * Appending stuff after a ajax request will most likely cause a js error.
+     * But there are moments when you actually want to do this.
+     *
+     * @return bool
+     *   Well? Is it an ajax request?
+     */
+    public function isAjax()
+    {
+        $server = $this->pool->getServer();
+
+        return isset($server['HTTP_X_REQUESTED_WITH']) === true &&
+            strtolower($server['HTTP_X_REQUESTED_WITH']) === 'xmlhttprequest';
+    }
+
+    /**
+     * Check for a cli request, simple wrapper aound php_sapi_name.
+     *
+     * @return bool
+     *   Well? Is it an cli request?
+     */
+    public function isCli()
+    {
+        return php_sapi_name() === 'cli';
+    }
+
+    /**
+     * Test if we did output any HTML so far.
+     *
+     * @return bool
+     *   Well? Is did we output HTML so far?
+     */
+    public function isOutputHtml()
+    {
+        static $result;
+
+        if ($result !== null) {
+            return $result;
+        }
+
+        if ($this->pool->config->getSetting(Fallback::SETTING_DETECT_AJAX) === Fallback::VALUE_FALSE) {
+            // We ignore the heades and send everything.
+            $result = true;
+        }
+
+        // When we have dispatched a PDF or Json, the browser will not be
+        // able to render the HTML output correctly.
+        foreach (headers_list() as $header) {
+            $header = strtolower($header);
+            if (strpos($header, 'content-type') !== false &&
+                strpos($header, 'html') === false
+            ) {
+                // We do have none html content type.
+                $result = false;
+            }
+        }
+
+        // Found nothing, must be HTML.
+        return $result = true;
+    }
+
+    /**
+     * Checks if the current client ip is allowed.
+     *
+     * @author Chin Leung
+     * @see https://stackoverflow.com/questions/35559119/php-ip-address-whitelist-with-wildcards
+     *
+     * @param string $whitelist
+     *   The ip whitelist.
+     *
+     * @return bool
+     *   Whether the current client ip is allowed or not.
+     */
+    public function isAllowedIp($whitelist)
+    {
+        $server = $this->pool->getServer();
+
+        if (empty($server[Config::REMOTE_ADDRESS]) === true) {
+            $remote = '';
+        } else {
+            $remote = $server[Config::REMOTE_ADDRESS];
+        }
+
+        $whitelist = explode(',', $whitelist);
+        if ($this->isCli() === true || in_array($remote, $whitelist) === true) {
+            // Either the IP is matched, or we are in CLI
+            return true;
+        }
+
+        // Check the wildcards.
+        foreach ($whitelist as $ip) {
+            $ip = trim($ip);
+            $wildcardPos = strpos($ip, '*');
+            // Check if the ip has a wildcard.
+            if ($wildcardPos !== false && substr($remote, 0, $wildcardPos) . '*' === $ip) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+}
