@@ -77,8 +77,6 @@ class ConfigTest extends AbstractTest
      * @covers \Brainworxx\Krexx\Service\Config\Config::getChunkDir
      * @covers \Brainworxx\Krexx\Service\Config\Config::getLogDir
      * @covers \Brainworxx\Krexx\Service\Config\Config::getPathToIniFile
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isRequestAjaxOrCli
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isAllowedIp
      */
     public function testConstructNormal()
     {
@@ -98,7 +96,7 @@ class ConfigTest extends AbstractTest
         Registration::addClassToDebugBlacklist($evilClassOne);
 
         // Simulate a normal call (not cli or ajax).
-        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\Service\\Config\\', 'php_sapi_name');
+        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\View\\Output\\', 'php_sapi_name');
         $sapiMock->expects($this->exactly(2))
             ->will($this->returnValue(static::NOT_CLI));
 
@@ -131,11 +129,10 @@ class ConfigTest extends AbstractTest
      * Test the browser output on cli.
      *
      * @covers \Brainworxx\Krexx\Service\Config\Config::__construct
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isRequestAjaxOrCli
      */
     public function testConstructCliBrowser()
     {
-        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\Service\\Config\\', 'php_sapi_name');
+        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\View\\Output\\', 'php_sapi_name');
         $sapiMock->expects($this->exactly(2))
             ->will($this->returnValue('cli'));
         $config = new Config(Krexx::$pool);
@@ -150,11 +147,10 @@ class ConfigTest extends AbstractTest
      * Test the browser output on ajax.
      *
      * @covers \Brainworxx\Krexx\Service\Config\Config::__construct
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isRequestAjaxOrCli
      */
     public function testConstructAjaxBrowser()
     {
-        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\Service\\Config\\', 'php_sapi_name');
+        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\View\\Output\\', 'php_sapi_name');
         $sapiMock->expects($this->exactly(1))
             ->will($this->returnValue(static::NOT_CLI));
         $_SERVER['HTTP_X_REQUESTED_WITH'] = 'xmlhttprequest';
@@ -170,12 +166,11 @@ class ConfigTest extends AbstractTest
      * Test the file output on cli.
      *
      * @covers \Brainworxx\Krexx\Service\Config\Config::__construct
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isRequestAjaxOrCli
      */
     public function testConstructCliFile()
     {
-        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\Service\\Config\\', 'php_sapi_name');
-        $sapiMock->expects($this->exactly(2))
+        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\View\\Output\\', 'php_sapi_name');
+        $sapiMock->expects($this->exactly(1))
             ->will($this->returnValue('cli'));
         ConfigSupplier::$overwriteValues = [
             Config::SETTING_DESTINATION => 'file'
@@ -193,8 +188,6 @@ class ConfigTest extends AbstractTest
      * Test the access from different ips.
      *
      * @covers \Brainworxx\Krexx\Service\Config\Config::__construct
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isRequestAjaxOrCli
-     * @covers \Brainworxx\Krexx\Service\Config\Config::isAllowedIp
      */
     public function testConstructIpRange()
     {
@@ -202,7 +195,7 @@ class ConfigTest extends AbstractTest
             Config::SETTING_IP_RANGE => '1.2.3.4.5, 127.0.0.1'
         ];
         Krexx::$pool->rewrite[Ini::class] = ConfigSupplier::class;
-        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\Service\\Config\\', 'php_sapi_name');
+        $sapiMock = $this->getFunctionMock('\\Brainworxx\\Krexx\\View\\Output\\', 'php_sapi_name');
         $sapiMock->expects($this->exactly(4))
             ->will($this->returnValue(static::NOT_CLI));
 
