@@ -2,6 +2,7 @@
 - Introduce php-mock/php-mock-phpunit
 - Change: Remove the event prefix and use static::class instead.
 - Change: Move cleanup methods to their own class.
+- Change: Move the output check methods to an appropriate class.
 
 3.1.0
 - Use some real autoloading, with a fallback to manually including
